# small-package

./: 18.06.sh  19.07.sh  README.md  create_acl_for_luci.err  create_acl_for_luci.ok  create_acl_for_luci.warn  main.sh
3ginfo/: Makefile
LingTiGameAcc/: Makefile  README.md
MentoHUST-OpenWrt-ipk/: Makefile  README.md
UA2F/: .clang-format  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  codecov.yml
UA2F/openwrt/: Makefile
UA2F/openwrt/files/: ua2f.config  ua2f.init  ua2f.uci
UA2F/scripts/: bench_client.go  bench_server.go  benchmark.py  requirements.txt  test-openwrt-docker.sh  test.py
UA2F/src/: assert.h  backtrace.h  cache.c  cache.h  cli.c  cli.h  config.c  config.h  custom.h.in  handler.c  handler.h  handler_io.c  http_parser_ua.c  http_session.c  http_session.h  mode.h  proxy.c  proxy.h  statistics.c  statistics.h  ua2f.c  util.c  util.h
UA2F/src/third/: nfqueue-mnl.c  nfqueue-mnl.h
UA2F/src/third/libbacktrace/: Makefile.in  aclocal.m4  config.h  config.h.in  configure.ac  configure~  install-debuginfo-for-buildid.sh  libtool
UA2F/src/third/nfqueue-mnl/: nfqueue-mnl.c  nfqueue-mnl.h
UA2F/src/third/uthash/: uthash.h
UA2F/test/: cache_test.cc  cli_test.cc  handler_test.cc  http_parser_ua_test.cc  http_session_test.cc  statistics_test.cc  util_test.cc
UA2F/uacheck/: index.php
UnblockNeteaseMusic/: Makefile  Makefile.rej
UnblockNeteaseMusic-Go/: Makefile
adguardhome/: Makefile
airconnect/: Makefile
alac/: Makefile
alist/: Makefile
aliyundrive-fuse/: Makefile
amule/: Makefile  Makefile.rej
amule-dlp/: Makefile
antileech/: Makefile
app-store-ui/: Makefile
aria2/: Makefile
ariang/: Makefile
atinout/: Makefile
autocore/: Makefile
autoshare-ksmbd/: Makefile
autoupdate/: Makefile
baidudrive/: Makefile
baidupcs-web/: Makefile
base-files/: Makefile
bpytop/: Makefile
brook/: Makefile
btop/: Makefile
cdnspeedtest/: Makefile
cgroupfs-mount/: Makefile
chatgpt-web/: Makefile  README.md
chinadns-ng/: Makefile
clashoo/: Makefile
coremark/: Makefile  Makefile.rej
cpulimit/: Makefile
cups/: Makefile
cxxopts/: Makefile
dae/: Makefile  test.sh
daed/: Makefile  default.pgo  pins.env
daed-next/: Makefile
dapnet-gateway/: Makefile
dat/: serverlist.txt
ddns-go/: Makefile
ddnsgo/: Makefile
ddnsto/: Makefile
ddnsto-openwrt/: README.md
default-settings/: Makefile
diy/: 18.06.sh  19.07.sh  21diffconfig  4.19Makefile  Lean.config  Leandiffconfig  Lienol.config  Lienoldiffconfig  Modify.sh  R2Sdiffconfig  R4Sdiffconfig  banner  create_acl_for_luci.sh  ctc_18.06.config  ctc_21.02.config  ctcdiffconfig  customize.sh  default-settings  index_x86.htm  main.sh  nanopi-r2s.config  nanopi-r4s.config  nanopi-r4sdiffconfig  zzz-default-settings
dns2socks/: Makefile
dns2socks-rust/: Makefile
dns2tcp/: Makefile
dnsproxy/: Makefile
docker/: Makefile  git-short-commit.sh
docker-lan-bridge/: Makefile
dockerd/: Config.in  Makefile  git-short-commit.sh
easytier/: Makefile
fail2banop/: Makefile
fastnet/: Makefile
ffmpeg-remux/: Makefile
ffmpeg-static/: Makefile
filebrowser/: Makefile
floatip/: Makefile
frp/: Makefile  Makefile.rej
fullconenat/: Makefile
geoview/: Makefile
glorytun/: Makefile  glorytun.config  init
glorytun-udp/: Makefile  glorytun-udp.config  init
gmediarender/: Makefile
gn/: Makefile
go-aliyundrive-webdav/: Makefile
golang/: Makefile
gost/: Makefile
gowebdav/: Makefile
grpcurl/: Makefile
haproxy/: Makefile
headscale/: Makefile
homebox/: Makefile
homeproxy/: Makefile  README
homeredirect/: Makefile
hysteria/: Makefile
ikoolproxy/: Makefile
ipcalc/: Makefile
ipt2socks/: Makefile
ircddb-gateway/: Makefile
istoreenhance/: Makefile
jpcre2/: Makefile
kai/: Makefile
kai_session/: Makefile
kaiplus/: Makefile
kcptun/: Makefile
lcdsimple/: Makefile
libcron/: Makefile
libdouble-conversion/: Makefile
libmmdvm/: Makefile
libtorrent-rasterbar/: Makefile
libwxwidgets/: Makefile
lingtigameacc/: Makefile
linkease/: Makefile
linkmount/: Makefile
lua-ipops/: Makefile
lua-neturl/: Makefile
luci-app-3ginfo-lite/: Makefile
luci-app-UUGameAcc/: Makefile
luci-app-adguardhome/: Makefile  README.md
luci-app-advancedsetting/: Makefile
luci-app-aihelper/: Makefile
luci-app-airconnect/: Makefile
luci-app-aliyundrive-fuse/: Makefile
luci-app-amlogic/: Makefile
luci-app-amule/: Makefile
luci-app-ap-modem/: Makefile
luci-app-arcadia/: Makefile
luci-app-argon-config/: Makefile
luci-app-argonne-config/: Makefile
luci-app-autoreboot/: Makefile
luci-app-autorepeater/: Makefile
luci-app-autoshell/: Makefile  autoshell
luci-app-autotimeset/: Makefile  README.md  README_CN.md
luci-app-autoupdate/: Makefile  README.md
luci-app-baidudrive/: Makefile
luci-app-baidupcs-web/: README.md
luci-app-bandwidthd/: Makefile  README.md
luci-app-beardropper/: README.md
luci-app-bmtedge/: Makefile
luci-app-bridge/: Makefile
luci-app-bypass/: Makefile
luci-app-chatgpt-web/: Makefile  README.md
luci-app-chinesesubfinder/: Makefile
luci-app-chongyoung/: Makefile
luci-app-chongyoung2.0/: Makefile
luci-app-clash/: Makefile
luci-app-clashoo/: Makefile
luci-app-clouddrive2/: Makefile
luci-app-cloudflarespeedtest/: Makefile
luci-app-codeserver/: Makefile
luci-app-control-timewol/: Makefile
luci-app-control-webrestriction/: Makefile
luci-app-control-weburl/: Makefile
luci-app-dae/: Makefile
luci-app-daed/: Makefile
luci-app-daed-next/: Makefile
luci-app-daede/: Makefile
luci-app-ddns-go/: Makefile  README.md
luci-app-demon/: Makefile
luci-app-design-config/: Makefile
luci-app-diskman/: Makefile
luci-app-dnscrypt-proxy2/: Makefile
luci-app-dnsfilter/: Makefile
luci-app-dnsmasq-ipset/: Makefile
luci-app-dnsproxy/: Makefile  README.md
luci-app-dockerman/: Makefile  Makefile.rej
luci-app-dpanel/: Makefile  simple-install.sh
luci-app-drawio/: Makefile
luci-app-droidmodem/: Makefile  README.md  install
luci-app-dsvpn/: Makefile
luci-app-easymesh/: Makefile
(+5305 files in other folders)
